# llm_project

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.volumes/qdrant_data/: raft_state.json
api/: Dockerfile  agent.py  config.py  main.py  models.py  pyproject.toml  vector_store.py
api/scripts/: fill_mock_recipes.py  fill_recipes.py
api/static/: recipes_rf_.json
api/static/Povarenok_recipes/: recipes_1.csv  recipes_10.csv  recipes_11.csv  recipes_12.csv  recipes_13.csv  recipes_14.csv  recipes_17.csv  recipes_19.csv  recipes_2.csv  recipes_23.csv  recipes_25.csv  recipes_28.csv  recipes_29.csv  recipes_30.csv  recipes_31.csv  recipes_32.csv  recipes_33.csv  recipes_34.csv  recipes_36.csv  recipes_40.csv  recipes_41.csv  recipes_5.csv  recipes_7.csv  recipes_8.csv
docs/: DESIGN.md  INFRA_REPORT.md  MVP_REPORT.md
parsing/: parse_russian_food.ipynb
static/Povarenok_recipes/: recipes_15.csv  recipes_16.csv  recipes_18.csv  recipes_20.csv  recipes_21.csv  recipes_22.csv  recipes_24.csv  recipes_26.csv  recipes_27.csv  recipes_3.csv  recipes_35.csv  recipes_37.csv  recipes_38.csv  recipes_39.csv  recipes_4.csv  recipes_6.csv  recipes_9.csv
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  api.ts  index.css  storage.ts
web/src/components/: ChatInput.tsx  ChatMessage.tsx  Header.tsx  SourcesPanel.tsx  Welcome.tsx
